# pybunch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
example/: fibonnaci.py  main.py
example/submodule/: __init__.py  motd.py
src/pybunch/: __main__.py  cli.py  packed_base.py  project.py
