[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pybunch"
version = "0.0.1"
authors = [
  { name="Yonatan Karidi", email="ykaridi@gmail.com" },
]
description = "A python utility to pack python projects into a single python file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ykaridi/pybunch"
Issues = "https://github.com/ykaridi/pybunch/issues"
